--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,18 @@ dependencies {
 
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+
+    // GOOGLE MAPS
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+
+    //Dexter for permission
+    implementation 'com.karumi:dexter:6.0.1'
+
+
+    //Timber use for log easally
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
