--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
     defaultConfig {
         applicationId "com.example.go4lunch"
         minSdkVersion 19
@@ -13,6 +12,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
     }
@@ -35,11 +35,11 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+
+    //tests
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 
     // BUTTERKNIFE
     implementation 'com.jakewharton:butterknife:10.2.3'
@@ -48,15 +48,16 @@ dependencies {
     //MATERIAL
     implementation 'com.google.android.material:material:1.3.0'
 
-
     //FireBase
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'com.google.firebase:firebase-core:18.0.2'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
+
     //Firebase store
     implementation 'com.google.firebase:firebase-firestore:22.1.0'
-
+    implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
 
@@ -69,8 +70,28 @@ dependencies {
     //Dexter for permission
     implementation 'com.karumi:dexter:6.0.1'
 
-
-    //Timber use for log easally
+    //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //Lifecycle Components
+    implementation "androidx.lifecycle:lifecycle-runtime:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+
+    //RXJAVA
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
 
 }
