--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".views.activities.MainActivity"></activity>
+        <activity android:name=".views.activities.MainActivity">
+        </activity>
         <activity android:name=".views.activities.AuthenticationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.RestaurantDetails"></activity>
+        <activity android:name=".views.activities.RestaurantDetails">
+        </activity>
     </application>
 
 </manifest>
