--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,23 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
+        // Google API Keys
+        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?:"" )
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
+            buildConfigField("String", "google_maps_key", GOOGLE_MAPS_API_KEY)
+           resValue("string", "google_maps_key", GOOGLE_MAPS_API_KEY)
+
         }
 
+        debug {
+        buildConfigField("String", "google_maps_key", GOOGLE_MAPS_API_KEY)
+                resValue("string", "google_maps_key", GOOGLE_MAPS_API_KEY)
+        }
     }
 
     // Butterknife requires Java 8.
