--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:4.0.2"
         classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+
     }
 }
 
