--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,8 @@ org.gradle.jvmargs=-Xmx2048m
 # org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+# https://developer.android.com/topic/libraries/support-library/an droidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+GOOGLE_MAPS_API_KEY="AIzaSyCj9D_m5ZrbeSO_PipkQv7K8k5DdqUhuTk"
