--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name=".views.activities.RestaurantDetails"></activity>
 
-        <activity android:name=".views.activities.FavoritesRestaurant"></activity>
+        <activity android:name=".views.activities.FavoritesRestaurantList"></activity>
     </application>
 
 </manifest>
