--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".views.activities.RestaurantDetails"></activity>
 
         <activity android:name=".views.activities.FavoritesRestaurantList"></activity>
+        <activity android:name=".settings.SettingsActivity"></activity>
     </application>
 
 </manifest>
