--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         multiDexEnabled true
 
         // Google API Keys
-        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?:"" )
+        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
     }
     buildTypes {
         release {
@@ -24,13 +24,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField("String", "google_maps_key", GOOGLE_MAPS_API_KEY)
-           resValue("string", "google_maps_key", GOOGLE_MAPS_API_KEY)
+            resValue("string", "google_maps_key", GOOGLE_MAPS_API_KEY)
 
         }
 
         debug {
-        buildConfigField("String", "google_maps_key", GOOGLE_MAPS_API_KEY)
-                resValue("string", "google_maps_key", GOOGLE_MAPS_API_KEY)
+            buildConfigField("String", "google_maps_key", GOOGLE_MAPS_API_KEY)
+            resValue("string", "google_maps_key", GOOGLE_MAPS_API_KEY)
         }
     }
 
@@ -66,7 +66,7 @@ android {
         implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
         //Firebase store
-        implementation 'com.google.firebase:firebase-firestore:22.1.1'
+        implementation 'com.google.firebase:firebase-firestore:22.1.2'
         implementation 'com.firebaseui:firebase-ui-firestore:5.0.0'
 
         //Facebook
@@ -88,9 +88,10 @@ android {
         implementation 'com.jakewharton.timber:timber:4.7.1'
 
         //Lifecycle Components
-        implementation "androidx.lifecycle:lifecycle-runtime:2.3.0"
-        implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0"
+        implementation "androidx.lifecycle:lifecycle-runtime:2.3.1"
+        implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
         implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
 
 
         //Glide
@@ -108,13 +109,20 @@ android {
         implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
         implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
 
-        // CLANS FAB
-        implementation 'com.github.clans:fab:1.6.2'
+        //  FAB
         implementation 'com.getbase:floatingactionbutton:1.10.1'
+
+        //Firebase Notification
+        implementation 'com.google.firebase:firebase-messaging:21.0.1'
+
+
+
     }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'androidx.work:work-runtime:2.5.0'
 }
