--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name=".views.activities.FavoritesRestaurantList">
 
         </activity>
-        <activity android:name=".notifications.SettingsActivity">
+        <activity android:name=".views.activities.SettingsActivity">
 
         </activity>
 
