--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,7 @@ android {
 
         implementation 'androidx.preference:preference:1.1.0'
 
+
     }
 }
 
@@ -126,4 +127,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
     implementation 'androidx.work:work-runtime:2.5.0'
+    implementation 'androidx.preference:preference:1.1.1'
 }
