--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,7 @@ android {
         implementation 'androidx.appcompat:appcompat:1.2.0'
         implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-        //tests
-        testImplementation 'junit:junit:4.13'
-        androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 
         // BUTTERKNIFE
         implementation 'com.jakewharton:butterknife:10.2.3'
@@ -59,10 +56,10 @@ android {
         implementation 'com.google.android.material:material:1.3.0'
 
         //FireBase
-        implementation 'com.google.firebase:firebase-analytics:18.0.2'
-        implementation 'com.google.firebase:firebase-auth:20.0.3'
+        implementation 'com.google.firebase:firebase-analytics:18.0.3'
+        implementation 'com.google.firebase:firebase-auth:20.0.4'
         implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
-        implementation 'com.google.firebase:firebase-core:18.0.2'
+        implementation 'com.google.firebase:firebase-core:18.0.3'
         implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
         //Firebase store
@@ -76,7 +73,7 @@ android {
         implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
 
         // GOOGLE MAPS
-        implementation 'com.google.android.gms:play-services-maps:17.0.0'
+        implementation 'com.google.android.gms:play-services-maps:17.0.1'
         implementation 'com.google.android.gms:play-services-location:18.0.0'
         implementation 'com.google.android.libraries.places:places:2.4.0'
         implementation 'com.google.android.gms:play-services-places:17.0.0'
@@ -113,19 +110,24 @@ android {
         implementation 'com.getbase:floatingactionbutton:1.10.1'
 
         //Firebase Notification
-        implementation 'com.google.firebase:firebase-messaging:21.0.1'
+        implementation 'com.google.firebase:firebase-messaging:21.1.0'
 
 
-        implementation 'androidx.preference:preference:1.1.0'
+        implementation 'androidx.preference:preference:1.1.1'
 
+
+        /// TESTS
+        testImplementation 'junit:junit:4.13'
+        testImplementation 'org.mockito:mockito-core:2.28.2'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+        // INSTRUMENTATION TEST
+        androidTestImplementation 'androidx.test:rules:1.3.0'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+        androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
 
     }
 }
 
-dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-messaging:21.0.1'
-    implementation 'androidx.work:work-runtime:2.5.0'
-    implementation 'androidx.preference:preference:1.1.1'
-}
